feat: Created a new input to select the unity in the registration form

--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -16,6 +16,10 @@
       <%= f.label :password, 'Contraseña' %>
       <%= f.password_field :password, placeholder: 'Contraseña' %>
     </div>
+    <div>
+      <%= f.label :Unidad, "Unidad" %>
+      <%= f.select :unity_id, get_unities() %>
+    </div>
     <%= f.submit "Crear cuenta" %>
   <% end %>
   <div>
